# direlera-rs

./: .gitignore  Cargo.toml  Dockerfile  PERFORMANCE.md  README.md  config.toml  config.toml.example  docker-compose.yml  start.sh  stop.sh
.github/workflows/: cross.yml  deploy.yml
src/: fields.rs  logger.rs  main.rs  master_list.rs  packet_util.rs  session_manager.rs  simplest_game_sync.rs  state.rs
src/handlers/: chat.rs  game.rs  mod.rs  sync.rs  user.rs  util.rs
src/kaillera/: protocol.rs
