[package]
name = "direlera-rs"
version = "0.5.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "rt"] }
byteorder = "1.4"
chrono = "0.4"
bytes = "1.4"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-bunyan-formatter = "0.3"
# Already pulled in transitively by tracing-subscriber; declared directly so we
# can enable Windows virtual-terminal (ANSI) processing at startup.
nu-ansi-term = "0.50"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
color-eyre = "0.6.5"
encoding_rs = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
metrics-util = { version = "0.19", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing-loki = { version = "0.2.7", default-features = false, features = ["rustls", "compat-0-2-1"] }
base64 = "0.22"


[profile.release]
debug = false
